--- a/about.html
+++ b/about.html
@@ -47,10 +47,59 @@
             <h2>Who we are?</h2>
 
             <p>
-
+                Bao gồm những thành viên: <br>
+                - Phạm Văn Ngọc Vinh <br>
+                - Phan Hoài Bão <br>
+                - 
             </p>
 
-            <abbr title=""></abbr>
+            <abbr title="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quo quos dolorum! Accusantium, nesciunt at repellat earum aspernatur nostrum voluptate quaerat debitis ipsum quam obcaecati, nobis blanditiis nulla magnam et.</abbr><br><br>
+
+            <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%" >HEHEHEHEHEHEHEHE</marquee>
+        </div>
+    </section>
+
+    <section id="about-app" class="section-p1">
+        <h1>Download App <a href="#">Here</a><h1>
+            <div class="video">
+                <video autoplay muted loop src="img/about/1.mp4"></video>
+            </div>
+    </section>
+
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <img src="img/features/f1.png" alt="">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f2.png" alt="">
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f3.png" alt="">
+            <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f4.png" alt="">
+            <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f5.png" alt="">
+            <h6>Happy Sell</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f6.png" alt="">
+            <h6>F24/7 Support</h6>
+        </div>
+    </section>
+
+    <section id="newsletters" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4>Đăng ký nhận tin</h4>
+            <p>Để lại email của bạn để nhận được những <span>ưu đãi đặc biệt</span> và những thông tin mới nhất</p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Nhập email của bạn"> <button class="normal">Đăng ký</button>
         </div>
     </section>
 
