--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>E-Shop</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+    <link rel="stylesheet" href="style.css">
+</head>
 
-        <link rel="stylesheet" href="style.css">
-    </head>
+<body>
 
-    <body>
+    <section id="header">
+        <a href="#"><img src="img/logo.png" class="logo" alt=""></a>
 
+        <div>
+            <ul id="navbar">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
+                <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                <a href="#" id="close"><i class="fa-solid fa-x"></i></a>
+            </ul>
+        </div>
 
-        <script src="script.js"></script>
+        <div id="mobile">
+            <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            <i id="bar" class="fas fa-outdent">
+            </i>
+            
+        </div>
+    </section>
 
-    </body>
+    <section id="page-header" class="about-header">
+        <h2>#Contact Us</h2>
+        <p>Holo Hala Hihi Haha</p>
+    </section>
 
-</html>
+    <section id="contact-details" class="section-p1">
+        <div class="details">
+            <span>GET IN TOUCH</span>
+            <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta, quis.</h2>
+            <h3>Head office</h3>
+            <div>
+                <li>
+                    <i class="fa-regular fa-map"></i>
+                    <p>666 Chan Cung Da Mem, Street 1, Haven</p>
+                </li>
+                <li>
+                    <i class="fa-regular fa-envelope"></i>
+                    <p>hihih@example.com</p>
+                </li>
+                <li>
+                    <i class="fa-regular fa-mobile"></i>
+                    <p>19001001</p>
+                </li>
+                <li>
+                    <i class="fa-regular fa-clock"></i>
+                    <p>00:00 - 01:00, Mon - Sat</p>
+                </li>
+            </div>
+        </div>
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7671.320565053276!2d108.24838222453995!3d15.979107555746605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142108997dc971f%3A0x1295cb3d313469c9!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBDw7RuZyBuZ2jhu4cgVGjDtG5nIHRpbiB2w6AgVHJ1eeG7gW4gdGjDtG5nIFZp4buHdCAtIEjDoG4!5e0!3m2!1svi!2s!4v1687173666599!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
+
+    <section id="form-details">
+        <form action="">
+            <span>Leave a message</span>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <input type="text" name="" id="" placeholder="Your name">
+            <input type="text" name="" id="" placeholder="Email">
+            <input type="text" name="" id="" placeholder="Subject">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
+            <button class="normal">Submit</button>
+        </form>
+
+        <div class="people">
+            <div>
+                <img src="img/people/1.png" alt="">
+                <p><span>Phan Hoai Bao</span> <br>Leader <br>Email: example@xxx.com <br>Phone: 01110111</p>
+            </div>
+            <div>
+                <img src="img/people/2.png" alt="">
+                <p><span>Pham Van Ngoc Vinh</span> <br>Leader <br>Email: example@xxx.com <br>Phone: 01110111</p>
+            </div>
+            <div>
+                <img src="img/people/3.png" alt="">
+                <p><span>Nhung</span> <br>Leader <br>Email: example@xxx.com <br>Phone: 01110111</p>
+            </div>
+            <div>
+                <img src="img/people/4.png" alt="">
+                <p><span>Ngoc</span> <br>Leader <br>Email: example@xxx.com <br>Phone: 01110111</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="newsletters" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4>Đăng ký nhận tin</h4>
+            <p>Để lại email của bạn để nhận được những <span>ưu đãi đặc biệt</span> và những thông tin mới nhất</p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Nhập email của bạn"> <button class="normal">Đăng ký</button>
+        </div>
+    </section>
+
+    <footer class="section-p1">
+        <div class="col">
+            <img class="logo" src="img/logo.png" alt="">
+            <h4>Contact</h4>
+            <p><Strong>Address: </Strong>666 Chan Cung Da Mem, Street 1, Haven</p>
+            <p><Strong>Phone: </Strong>19001001</p>
+            <p><Strong>Hours: </Strong>00:00 - 01:00, Mon - Sat</p>
+            <div class="follow">
+                <h4>Follow us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About Us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Contact Us</a>
+        </div>
+
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+
+        <div class="col install">
+            <h4>Install App</h4>
+            <div class="row">
+                <img src="img/pay/app.jpg" alt="">
+                <img src="img/pay/play.jpg" alt="">
+            </div>
+            <p>Secured Payment Gateways</p>
+            <img src="img/pay/pay.png" alt="">
+        </div>
+
+        <div class="copyright">
+            <p>2024</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+
+</html> 
