--- a/about.html
+++ b/about.html
@@ -50,7 +50,8 @@
                 Bao gồm những thành viên: <br>
                 - Phạm Văn Ngọc Vinh <br>
                 - Phan Hoài Bão <br>
-                - 
+                - Nhung <br>
+                - Du <br>
             </p>
 
             <abbr title="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi quo quos dolorum! Accusantium, nesciunt at repellat earum aspernatur nostrum voluptate quaerat debitis ipsum quam obcaecati, nobis blanditiis nulla magnam et.</abbr><br><br>
