--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
             </div>
             <div>
                 <img src="img/people/4.png" alt="">
-                <p><span>Ngoc</span> <br>Leader <br>Email: example@xxx.com <br>Phone: 01110111</p>
+                <p><span>Du</span> <br>Leader <br>Email: example@xxx.com <br>Phone: 01110111</p>
             </div>
         </div>
     </section>
