--- a/cart.html
+++ b/cart.html
@@ -56,7 +56,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
+                        <a href="#" class="remove-product"><i class="fa-regular fa-circle-xmark"></i></a>
                     </td>
                     <td><img src="img/products/f1.jpg" alt=""></td>
                     <td>Áo hoa lá cành 1</td>
@@ -68,7 +68,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
+                        <a href="#" class="remove-product"><i class="fa-regular fa-circle-xmark"></i></a>
                     </td>
                     <td><img src="img/products/f2.jpg" alt=""></td>
                     <td>Áo hoa lá cành lla</td>
@@ -80,7 +80,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href="#"><i class="fa-regular fa-circle-xmark"></i></a>
+                        <a href="#" class="remove-product"><i class="fa-regular fa-circle-xmark"></i></a>
                     </td>
                     <td><img src="img/products/f3.jpg" alt=""></td>
                     <td>Áo hoa lá cành luxury</td>
@@ -174,6 +174,41 @@
     </footer>
 
     <script src="script.js"></script>
+    <script>
+        const removeProductButtons = document.querySelectorAll('.remove-product');
+        removeProductButtons.forEach(button => {
+            button.addEventListener('click', removeProduct);
+        });
+
+        function removeProduct(event) {
+            event.preventDefault();
+
+            const row = event.target.closest('tr');
+            row.remove();
+        }
+        // Add your JavaScript code here
+        const applyCouponButton = document.querySelector('#coupon button');
+        applyCouponButton.addEventListener('click', applyCoupon);
+
+        function applyCoupon() {
+            // Retrieve the coupon input value
+            const couponInput = document.querySelector('#coupon input');
+            const couponValue = couponInput.value;
+
+            // Apply coupon logic here
+
+            // Display a success message
+            alert('Coupon applied successfully!');
+        }
+
+        const proceedToCheckoutButton = document.querySelector('#subtotal button');
+        proceedToCheckoutButton.addEventListener('click', proceedToCheckout);
+
+        function proceedToCheckout() {
+            // Redirect to the checkout page or perform any necessary actions
+            window.location.href = 'checkout.html';
+        }
+    </script>
 </body>
 
 </html>
