--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             <i id="bar" class="fas fa-outdent">
             </i>
-            
+
         </div>
     </section>
 
@@ -66,7 +66,10 @@
             </div>
         </div>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7671.320565053276!2d108.24838222453995!3d15.979107555746605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142108997dc971f%3A0x1295cb3d313469c9!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBDw7RuZyBuZ2jhu4cgVGjDtG5nIHRpbiB2w6AgVHJ1eeG7gW4gdGjDtG5nIFZp4buHdCAtIEjDoG4!5e0!3m2!1svi!2s!4v1687173666599!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7671.320565053276!2d108.24838222453995!3d15.979107555746605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142108997dc971f%3A0x1295cb3d313469c9!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBDw7RuZyBuZ2jhu4cgVGjDtG5nIHRpbiB2w6AgVHJ1eeG7gW4gdGjDtG5nIFZp4buHdCAtIEjDoG4!5e0!3m2!1svi!2s!4v1687173666599!5m2!1svi!2s"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
@@ -74,10 +77,10 @@
         <form action="">
             <span>Leave a message</span>
             <h2>Lorem ipsum dolor sit amet.</h2>
-            <input type="text" name="" id="" placeholder="Your name">
-            <input type="text" name="" id="" placeholder="Email">
-            <input type="text" name="" id="" placeholder="Subject">
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
+            <input type="text" name="" id="" placeholder="Your name" required>
+            <input type="email" name="" id="" placeholder="Email" required>
+            <input type="text" name="" id="" placeholder="Subject" required>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your message" required></textarea>
             <button class="normal">Submit</button>
         </form>
 
@@ -163,6 +166,42 @@
     </footer>
 
     <script src="script.js"></script>
+    <script>
+        document.getElementById('myForm').addEventListener('submit', function (event) {
+            event.preventDefault(); // Prevent the form from submitting
+
+            // Get the form values
+            var name = document.getElementById('name').value;
+            var email = document.getElementById('email').value;
+            var subject = document.getElementById('subject').value;
+            var message = document.getElementById('message').value;
+
+            // Validate the form fields
+            if (name === '') {
+                alert('Please enter your name.');
+                return;
+            }
+
+            if (email === '') {
+                alert('Please enter your email.');
+                return;
+            }
+
+            if (subject === '') {
+                alert('Please enter the subject.');
+                return;
+            }
+
+            if (message === '') {
+                alert('Please enter your message.');
+                return;
+            }
+
+            // If all fields are valid, you can submit the form
+            alert('Form submitted successfully!');
+            // document.getElementById('myForm').submit(); // Uncomment this line to submit the form
+        });
+    </script>
 </body>
 
-</html> 
+</html>
