--- a/contact.html
+++ b/contact.html
@@ -166,40 +166,43 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        document.getElementById('myForm').addEventListener('submit', function (event) {
-            event.preventDefault(); // Prevent the form from submitting
+        $(document).ready(function () {
+            $('#myForm').submit(function (event) {
+                event.preventDefault(); // Prevent the form from submitting
 
-            // Get the form values
-            var name = document.getElementById('name').value;
-            var email = document.getElementById('email').value;
-            var subject = document.getElementById('subject').value;
-            var message = document.getElementById('message').value;
+                // Get the form values
+                var name = $('#name').val();
+                var email = $('#email').val();
+                var subject = $('#subject').val();
+                var message = $('#message').val();
 
-            // Validate the form fields
-            if (name === '') {
-                alert('Please enter your name.');
-                return;
-            }
+                // Validate the form fields
+                if (name === '') {
+                    alert('Please enter your name.');
+                    return;
+                }
 
-            if (email === '') {
-                alert('Please enter your email.');
-                return;
-            }
+                if (email === '') {
+                    alert('Please enter your email.');
+                    return;
+                }
 
-            if (subject === '') {
-                alert('Please enter the subject.');
-                return;
-            }
+                if (subject === '') {
+                    alert('Please enter the subject.');
+                    return;
+                }
 
-            if (message === '') {
-                alert('Please enter your message.');
-                return;
-            }
+                if (message === '') {
+                    alert('Please enter your message.');
+                    return;
+                }
 
-            // If all fields are valid, you can submit the form
-            alert('Form submitted successfully!');
-            // document.getElementById('myForm').submit(); // Uncomment this line to submit the form
+                // If all fields are valid, you can submit the form
+                alert('Form submitted successfully!');
+                // $('#myForm').submit(); // Uncomment this line to submit the form
+            });
         });
     </script>
 </body>
